// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridCell renders correctly when cell is complete 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-blue-400 bg-gray-200bg-green-100"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value="5"
  />
</div>
`;

exports[`GridCell renders correctly when cell is highlighted 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-blue-400 bg-blue-100"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value="5"
  />
</div>
`;

exports[`GridCell renders correctly when cell is selected 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-blue-400 bg-blue-200"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value="5"
  />
</div>
`;

exports[`GridCell renders correctly when cell is uneditable 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center select-none bg-gray-200"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    readonly=""
    step="1"
    type="number"
    value="1"
  />
</div>
`;

exports[`GridCell renders correctly when cell value is a number 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-blue-400 bg-gray-200"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value="5"
  />
</div>
`;

exports[`GridCell renders correctly when cell value is null 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-blue-400 bg-gray-200"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value=""
  />
</div>
`;

exports[`GridCell renders correctly when editable cell has conflict 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center text-red-400 bg-red-100"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    step="1"
    type="number"
    value="5"
  />
</div>
`;

exports[`GridCell renders correctly when unedtiable cell has conflict 1`] = `
<div>
  <input
    class="flex items-center justify-center text-center select-none bg-red-100"
    data-testid="cell"
    id="cell-undefined"
    max="9"
    min="1"
    readonly=""
    step="1"
    type="number"
    value="1"
  />
</div>
`;
